# PeepingTom

./: .gitignore  .gitmodules  .old.PeepingTom.caba  CHANGELOG.md  LICENSE  PeepingTom.cabal  README.md  cabal.project.local  help.txt  makefile
.github/workflows/: haskell.yml
app/: Autocomplete.hs  CLI.hs  Commands.hs  Main.hs  OldMain.hs  PeepingTom-test.h  State.hs
app/Commands/: Base.hs  Demo.hs  Help.hs  IntSet.hs  List.hs  Load.hs  New.hs  PID.hs  Reset.hs  Save.hs  Selection.hs  Set.hs  StrSet.hs  Update.hs
app/Commands/Selection/: Eq.hs  Geq.hs  Gt.hs  Helper.hs  Leq.hs  Lt.hs  Neq.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.1/: PeepingTom-0.1.0.0-inplace.conf  package.cache
exe/: Main.hs
install/: PeepingTom
speedtest/: Main.hs  PeepingTom-speedtest.h
src/: .notes  Internal.hs  Main.hs  Maps.hs  PeepingTom.hs  Posix.hs  Type.hs  TypeFilter.hs  Types.hs  VMIO.hs  helper.h
src/PeepingTom/: Common.hs  Conversions.hs  Fast.hs  Filter.hs  Filters.hs  IO.hs  Internal.hs  Map.hs  Maps.hs  Posix.hs  Scan.hs  State.hs  Type.hs  Writer.hs
src/PeepingTom/Experimental/: Filters.hs  PT.hs
src/PeepingTom/Experimental/Fast/: ChunkReader.c  Common.hs  Filters.hs  MSeq.hs  State.hs
src/PeepingTom/Experimental/Fast/C/: ChunkReader.c  Filters.c  Scanner.c
src/PeepingTom/Fast/: Common.hs  Filter.hs  MSeq.hs  Scan.hs
src/PeepingTom/Fast/C/: Filters.c  Scanner.c
test/: Main.hs  PeepingTom-test.h
