cabal-version:      3.0
name:               PeepingTom
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             lesserfish
maintainer:         lesserfish@pm.me
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: src/PeepingTom/helper.h

common warnings
    ghc-options:
-- -Wall



executable PeepingTom
    import:           warnings
    main-is:          Main.hs
    other-modules:  PeepingTom.Maps, PeepingTom.Posix, PeepingTom.Type, PeepingTom, PeepingTom.IO, PeepingTom.Filters, PeepingTom.Internal, PeepingTom.Conversions
    -- other-extensions:
    build-depends:    base >= 4.18.0.0,
                      bytestring >= 0.11.4.0,
                      split >= 0.2.3.5,
                      binary >= 0.8.9.1,
                      mtl >= 2.3.1,
                      deepseq >= 1.4.4.0

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -fobject-code
-- -O2 -prof -fprof-auto -rtsopts
