cabal-version: 3.0
name: PeepingTom
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: lesserfish
maintainer: lesserfish@pm.me
category: System
build-type: Simple
extra-doc-files: CHANGELOG.md
extra-source-files: src/PeepingTom/helper.h, 
                    src/PeepingTom/Experimental/Fast/C/Filters.c,
                    src/PeepingTom/Experimental/Fast/C/Scanner.c, 


common warnings
  ghc-options:
  -Wall

library PeepingTom-lib
  exposed-modules:  PeepingTom.Maps, 
                    PeepingTom.Posix, 
                    PeepingTom.Type, 
                    PeepingTom.State, 
                    PeepingTom.IO, 
                    PeepingTom.Filters, 
                    PeepingTom.Internal, 
                    PeepingTom.Conversions, 
                    PeepingTom.Writer, 
                    PeepingTom.Experimental.PT, 
                    PeepingTom.Experimental.Fast.State,
                    PeepingTom.Experimental.Fast.Filters,
                    PeepingTom.Experimental.Fast.MSeq,
  build-depends:    base >= 4.18.0.0,
                    bytestring >= 0.11.4.0,
                    split >= 0.2.3.5,
                    binary >= 0.8.9.1,
                    mtl >= 2.3.1,
                    containers >= 0.6.8,
                    async >= 2.2.4
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2  
  --prof -fprof-auto -rtsopts

test-suite PeepingTom-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4.18.0.0,
        PeepingTom-lib
    extra-include-dirs: test/scanmem/
    extra-lib-dirs: test/scanmem/build/.libs/
    extra-libraries: scanmem

executable PeepingTom-speedtest
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   speedtest
    main-is:          Main.hs
    build-depends:
        base >= 4.18.0.0,
        PeepingTom-lib
    extra-include-dirs: test/scanmem/
    extra-lib-dirs: test/scanmem/build/.libs/
    extra-libraries: scanmem

executable PeepingTom
  main-is: CLI.hs
  other-modules: Commands, 
        Autocomplete, 
        State, 
        Commands.Base,
        Commands.Help,
        Commands.IntSet,
        Commands.List,
        Commands.Load,
        Commands.New,
        Commands.PID,
        Commands.Reset,
        Commands.Save,
        Commands.StrSet,
        Commands.Selection,
        Commands.Selection.Eq,
        Commands.Selection.Geq,
        Commands.Selection.Gt,
        Commands.Selection.Helper,
        Commands.Selection.Leq,
        Commands.Selection.Lt,
        Commands.Selection.Neq,
        Commands.Set,
        Commands.Update,
        Commands.Demo
  build-depends: base >= 4.18.0.0, 
                 PeepingTom-lib,
                 haskeline >= 0.8.2.1,
                 containers >= 0.6.7
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -O2 
  extra-source-files: src/PeepingTom/helper.h, 
                    src/PeepingTom/Experimental/Fast/C/Filters.h,
                    src/PeepingTom/Experimental/Fast/C/Scanner.c, 


--prof -rtsopts -fprof-auto 
